example_Challenges/XO9_Docker_in_Docker/challenge/deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xo9-honorport-heist
  labels:
    app: xo9-honorport-heist
    challenge: xo9-dind
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xo9-honorport-heist
  template:
    metadata:
      labels:
        app: xo9-honorport-heist
    spec:
      automountServiceAccountToken: false
      containers:
        - name: xo9-challenge
          image: xo9-honorport-heist:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 22
              name: ssh
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
