example_Challenges/XO9_Docker_in_Docker/challenge/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xo9-honorport-heist
  labels:
    app: xo9-honorport-heist
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
    - port: 22
      targetPort: 22
      protocol: TCP
      name: ssh
  selector:
    app: xo9-honorport-heist
