example_Challenges/XO9_Docker_in_Docker/challenge/deployment/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-external
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: xo9-honorport-heist
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: []
      ports:
        - protocol: TCP
          port: 8080
        - protocol: TCP
          port: 22
  egress:
    - to: []
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
